--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,31 +2,64 @@ name: main-ci
 
 on:
   push:
-    branches: ["master"]
+    branches: [ "master" ]
   pull_request:
-    branches: ["master"]
+    branches: [ "master" ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      checks: write
+    services:
+      rabbitmq:
+        image: rabbitmq:3-management
+        ports:
+          - 5672:5672
+          - 15672:15672
+        options: >-
+          --health-cmd "rabbitmqctl status"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      minio:
+        build:
+          context: .
+          dockerfile: Dockerfile.ci-minio
+        image: minio/minio:latest
+        volumes:
+          - 'minio_data:/data'
+        ports:
+          - 9000:9000
+        env:
+          MINIO_ROOT_USER: root
+          MINIO_ROOT_PASSWORD: az2RGrBK08LV
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup JDK
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: temurin
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+      - uses: gradle/actions/setup-gradle@v4
 
-      - name: Build and Test
+      - name: Wait for MinIO
+        run: |
+          for i in {1..30}; do
+            nc -z minio 9000 && break
+            echo "Waiting for MinIO..."
+            sleep 2
+          done
+
+      - name: Wait for RabbitMQ
+        run: |
+          for i in {1..30}; do
+            nc -z localhost 5672 && break
+            echo "Waiting for RabbitMQ..."
+            sleep 2
+          done
+
+      - name: Build and test
         run: ./gradlew build --no-daemon
         env:
-          SPRING_RABBITMQ_HOST: rabbitmq
+          SPRING_RABBITMQ_HOST: localhost
           SPRING_RABBITMQ_PORT: 5672
           SPRING_RABBITMQ_USERNAME: guest
           SPRING_RABBITMQ_PASSWORD: guest
@@ -35,10 +68,12 @@ jobs:
           MINIO_ACCESS_KEY: root
           MINIO_SECRET_KEY: az2RGrBK08LV
 
-      - name: Generate test report
-        uses: dorny/test-reporter@v1
+      - uses: dorny/test-reporter@v1
         if: always()
         with:
           name: JUnit Tests
           path: build/test-results/test/*.xml
           reporter: java-junit
+
+volumes:
+  minio_data:
