--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ configurations {
 repositories {
     mavenCentral()
 }
+ext {
+
+}
 
 dependencies {
     def stateMachineVersion = '4.0.1'
@@ -31,6 +34,7 @@ dependencies {
     def lombokVersion = '1.18.42'
     def poiVersion = '5.3.0'
     def minioVersion = '8.5.14'
+    def testContainersVersion = '1.21.3'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -54,8 +58,8 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     testImplementation "org.testcontainers:junit-jupiter:1.21.3"
-    testImplementation "org.testcontainers:postgresql:1.21.3"
-    testImplementation('com.h2database:h2')
+    testImplementation 'org.testcontainers:postgresql:' + testContainersVersion
+    testImplementation 'org.testcontainers:minio:' + testContainersVersion
 }
 
 tasks.named('test') {
