--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,42 +10,23 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup JDK
+        uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: temurin
-      - uses: gradle/actions/setup-gradle@v4
 
-      - name: Wait for MinIO
-        run: |
-          for i in {1..30}; do
-            nc -z minio 9000 && break
-            echo "Waiting for MinIO..."
-            sleep 2
-          done
-
-      - name: Wait for RabbitMQ
-        run: |
-          for i in {1..30}; do
-            nc -z localhost 5672 && break
-            echo "Waiting for RabbitMQ..."
-            sleep 2
-          done
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Build and test
         run: ./gradlew build --no-daemon
-        env:
-          SPRING_RABBITMQ_HOST: localhost
-          SPRING_RABBITMQ_PORT: 5672
-          SPRING_RABBITMQ_USERNAME: guest
-          SPRING_RABBITMQ_PASSWORD: guest
-          MINIO_URL: http://localhost:9000
-          MINIO_BUCKET: offer-processing
-          MINIO_ACCESS_KEY: root
-          MINIO_SECRET_KEY: az2RGrBK08LV
 
-      - uses: dorny/test-reporter@v1
+      - name: Test Report
+        uses: dorny/test-reporter@v1
         if: always()
         with:
           name: JUnit Tests
