--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: ./gradlew build --no-daemon
 
       - uses: dorny/test-reporter@v1
-        if: github.event_name != 'pull_request' || github.repository == github.event.pull_request.head.repo.full_name
+        if: always()
         with:
           name: JUnit Tests
           path: build/test-results/test/*.xml
