--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,11 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Build and test
+      - name: Build and Test
         run: ./gradlew build --no-daemon
 
-      - uses: dorny/test-reporter@v1
+      - name: Test Report
+        uses: dorny/test-reporter@v1
         if: always()
         with:
           name: JUnit Tests
